--- a/package.json
+++ b/package.json
@@ -1,29 +1,53 @@
 {
   "name": "minesweeper",
-  "version": "0.0.0",
-  "description": "",
-  "main": "index.html",
+  "version": "2.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "private": true,
   "dependencies": {
-    "angular": "^1.6.5"
+    "@angular/animations": "^4.2.4",
+    "@angular/common": "^4.2.4",
+    "@angular/compiler": "^4.2.4",
+    "@angular/core": "^4.2.4",
+    "@angular/forms": "^4.2.4",
+    "@angular/http": "^4.2.4",
+    "@angular/platform-browser": "^4.2.4",
+    "@angular/platform-browser-dynamic": "^4.2.4",
+    "@angular/router": "^4.2.4",
+    "core-js": "^2.4.1",
+    "rxjs": "^5.4.2",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "gulp": "git+https://git@github.com/gulpjs/gulp.git#4.0",
-    "gulp-clean-css": "~2.0.11",
-    "gulp-cli": "~1.2.2",
-    "gulp-concat": "~2.6.0",
-    "gulp-hub": "frankwallis/gulp-hub#registry-init",
-    "gulp-less": "~3.1.0",
-    "gulp-load-plugins": "~1.2.4",
-    "gulp-order": "~1.1.1",
-    "gulp-print": "~2.0.1",
-    "gulp-sourcemaps": "~1.6.0",
-    "gulp-uglify": "~1.5.4",
-    "gulp-util": "~3.0.7",
+
     "less": "^2.7.2",
-    "less-plugin-autoprefix": "~1.5.1"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "less-plugin-autoprefix": "~1.5.1",
+
+    "@angular/cli": "1.4.2",
+    "@angular/compiler-cli": "^4.2.4",
+    "@angular/language-service": "^4.2.4",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "codelyzer": "~3.1.1",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.2",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.3.2",
+    "typescript": "~2.3.3"
   },
   "repository": "https://github.com/robinsoepboer/minesweeper.git",
   "author": "Robin Soepboer",
