bug fix: minesweeper now opens full page

--- a/angular.json
+++ b/angular.json
@@ -95,7 +95,8 @@
             "assets": [
               "src/assets",
               "src/favicon.ico",
-              "src/manifest.json"
+              "src/manifest.json",
+              "src/background.js"
             ]
           }
         },
